# ocr-fine-app

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PROJECT_MAP.md  README.md  docker-compose.yml  pyproject.toml  requirements-colab.txt
app/: extract_lab.py  streamlit_app.py
cloud/: README.md
cloud/aws/: README.md
cloud/azure/: README.md
data/stage1_mlx/: train.jsonl  valid.jsonl
data/stage1_train/: train.jsonl  val.jsonl
data/stage2_mlx/: train.jsonl  valid.jsonl
data/stage2_train/: train.jsonl  val.jsonl
docs/: pdf-extraction-2026.md
finetuning/: README.md
finetuning/axolotl/: README.md
finetuning/huggingface/: README.md  config.py  dataset_prep.py  requirements.txt  train_lora.py  train_qlora.py  train_sft_trl.py
finetuning/llamafactory/: README.md
inference/: README.md
inference/huggingface/: README.md  basic_generate.py  batched.py  pipeline_api.py  requirements.txt  serve_fastapi.py  streaming.py  with_adapter.py
inference/kubernetes/: README.md
inference/ollama/: Modelfile  README.md  client_example.py  rag_server_ollama.py
inference/tgi/: README.md  docker-compose.yml
notebooks/: 01_explore_data.ipynb  02_finetune_stage1.ipynb  02b_stage1_colab.ipynb  03_finetune_stage2.ipynb  03b_stage2_colab.ipynb  04_end_to_end_rag.ipynb
scripts/: download_data.py  fuse_model.py  make_notebooks.py  pack_for_colab.sh  prepare_stage1.py  prepare_stage2.py  setup_demo_models.sh  test_api.sh
src/: chunking.py  config.py  data.py  eval.py  extract.py  field_compare.py  field_extractor.py  infer.py  pdf_utils.py  rag.py  rag_v2.py
(+73 files in other folders)
